[gd_scene load_steps=8 format=2]

[ext_resource path="res://code/View.gd" type="Script" id=1]
[ext_resource path="res://code/ImageDisplay.gd" type="Script" id=2]
[ext_resource path="res://code/addTag.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://code/editTags.gd" type="Script" id=5]
[ext_resource path="res://code/filterTabs.gd" type="Script" id=6]
[ext_resource path="res://code/SettingsWindow.gd" type="Script" id=7]

[node name="View" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ImageDisplay" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="FileDialog" type="FileDialog" parent="ImageDisplay"]
margin_left = 351.0
margin_top = 28.0
margin_right = 1015.0
margin_bottom = 431.0
window_title = "Ouvrir un fichier ou un r√©pertoire"
resizable = true
mode = 3
access = 2
show_hidden_files = true

[node name="VBoxContainer" type="VBoxContainer" parent="ImageDisplay"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="toolbar" type="HBoxContainer" parent="ImageDisplay/VBoxContainer"]
margin_right = 1010.0
margin_bottom = 20.0

[node name="add" type="Button" parent="ImageDisplay/VBoxContainer/toolbar"]
margin_right = 35.0
margin_bottom = 20.0
text = "add"

[node name="add_dir" type="Button" parent="ImageDisplay/VBoxContainer/toolbar"]
margin_left = 39.0
margin_right = 105.0
margin_bottom = 20.0
hint_tooltip = "add all files of a folder
already imported files will be ignored"
text = "bulk add"

[node name="VSeparator" type="VSeparator" parent="ImageDisplay/VBoxContainer/toolbar"]
margin_left = 109.0
margin_right = 113.0
margin_bottom = 20.0

[node name="delete" type="Button" parent="ImageDisplay/VBoxContainer/toolbar"]
margin_left = 117.0
margin_right = 170.0
margin_bottom = 20.0
text = "delete"

[node name="purge" type="Button" parent="ImageDisplay/VBoxContainer/toolbar"]
margin_left = 174.0
margin_right = 303.0
margin_bottom = 20.0
hint_tooltip = "Delete all tags not assigned to any element"
text = "purge unused tags"

[node name="VSeparator2" type="VSeparator" parent="ImageDisplay/VBoxContainer/toolbar"]
margin_left = 307.0
margin_right = 311.0
margin_bottom = 20.0

[node name="selectAll" type="Button" parent="ImageDisplay/VBoxContainer/toolbar"]
margin_left = 315.0
margin_right = 385.0
margin_bottom = 20.0
text = "select all"

[node name="deselect" type="Button" parent="ImageDisplay/VBoxContainer/toolbar"]
margin_left = 389.0
margin_right = 495.0
margin_bottom = 20.0
text = "clear selection"

[node name="VSeparator3" type="VSeparator" parent="ImageDisplay/VBoxContainer/toolbar"]
margin_left = 499.0
margin_right = 503.0
margin_bottom = 20.0

[node name="addRef" type="Button" parent="ImageDisplay/VBoxContainer/toolbar"]
margin_left = 507.0
margin_right = 631.0
margin_bottom = 20.0
text = "add to references"

[node name="dump" type="Button" parent="ImageDisplay/VBoxContainer/toolbar"]
margin_left = 635.0
margin_right = 756.0
margin_bottom = 20.0
text = "dump references"

[node name="VSeparator4" type="VSeparator" parent="ImageDisplay/VBoxContainer/toolbar"]
margin_left = 760.0
margin_right = 764.0
margin_bottom = 20.0

[node name="settings" type="Button" parent="ImageDisplay/VBoxContainer/toolbar"]
margin_left = 768.0
margin_right = 831.0
margin_bottom = 20.0
text = "settings"

[node name="HBoxContainer2" type="HBoxContainer" parent="ImageDisplay/VBoxContainer"]
margin_top = 24.0
margin_right = 1010.0
margin_bottom = 44.0

[node name="number" type="Label" parent="ImageDisplay/VBoxContainer/HBoxContainer2"]
margin_top = 3.0
margin_bottom = 17.0
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ImageDisplay/VBoxContainer/HBoxContainer2"]
margin_left = 4.0
margin_right = 1010.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="filters" type="HFlowContainer" parent="ImageDisplay/VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_right = 953.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="filterMenu" type="Button" parent="ImageDisplay/VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_left = 957.0
margin_right = 1006.0
margin_bottom = 20.0
text = "filters"

[node name="ScrollContainer" type="ScrollContainer" parent="ImageDisplay/VBoxContainer"]
margin_top = 48.0
margin_right = 1010.0
margin_bottom = 568.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="HFlowContainer" parent="ImageDisplay/VBoxContainer/ScrollContainer"]
margin_right = 1010.0
margin_bottom = 520.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="bottom_bar" type="HBoxContainer" parent="ImageDisplay/VBoxContainer"]
margin_top = 572.0
margin_right = 1010.0
margin_bottom = 586.0

[node name="info" type="Label" parent="ImageDisplay/VBoxContainer/bottom_bar"]
margin_bottom = 14.0

[node name="AlertPopup" type="AcceptDialog" parent="ImageDisplay"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
window_title = "Alerte !"

[node name="PopupMenu" type="PopupMenu" parent="ImageDisplay"]
margin_left = 478.0
margin_top = 272.0
margin_right = 546.0
margin_bottom = 328.0
size_flags_horizontal = 4
size_flags_vertical = 4
items = [ "Add tag", null, 0, false, false, 0, 0, null, "", false, "Edit", null, 0, false, false, 1, 0, null, "", false ]

[node name="VBoxContainer2" type="Panel" parent="ImageDisplay"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="VBoxContainer" type="VBoxContainer" parent="ImageDisplay/VBoxContainer2"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="ImageDisplay/VBoxContainer2/VBoxContainer"]
margin_right = 1010.0
margin_bottom = 562.0
size_flags_vertical = 3
tab_align = 0
script = ExtResource( 6 )

[node name="uncheck" type="Button" parent="ImageDisplay/VBoxContainer2/VBoxContainer"]
margin_top = 566.0
margin_right = 1010.0
margin_bottom = 586.0
text = "uncheck all"

[node name="addTag" type="WindowDialog" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -749.0
margin_top = -170.0
margin_bottom = 290.0
size_flags_horizontal = 3
size_flags_vertical = 3
popup_exclusive = true
window_title = "Add a tag"
resizable = true
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="addTag"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="addTag/HBoxContainer"]
margin_right = 300.0
margin_bottom = 460.0

[node name="path" type="Label" parent="addTag/HBoxContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 14.0

[node name="TextureRect" type="TextureRect" parent="addTag/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 300.0
margin_bottom = 318.0
rect_min_size = Vector2( 300, 300 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 4 )
expand = true
stretch_mode = 1

[node name="name" type="Label" parent="addTag/HBoxContainer/VBoxContainer"]
margin_top = 322.0
margin_right = 300.0
margin_bottom = 336.0

[node name="tagList" type="HFlowContainer" parent="addTag/HBoxContainer/VBoxContainer"]
margin_top = 340.0
margin_right = 300.0
margin_bottom = 460.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="addTag/HBoxContainer"]
margin_left = 304.0
margin_right = 749.0
margin_bottom = 460.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="addTag/HBoxContainer/VBoxContainer2"]
margin_right = 445.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="addTag/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_top = 5.0
margin_right = 59.0
margin_bottom = 19.0
text = "New tag :"

[node name="LineEdit" type="LineEdit" parent="addTag/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 63.0
margin_right = 404.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="addNew" type="Button" parent="addTag/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 408.0
margin_right = 445.0
margin_bottom = 24.0
text = "Add"

[node name="OptionButton" type="OptionButton" parent="addTag/HBoxContainer/VBoxContainer2"]
margin_top = 28.0
margin_right = 445.0
margin_bottom = 48.0

[node name="validate" type="Button" parent="addTag/HBoxContainer/VBoxContainer2"]
margin_top = 52.0
margin_right = 445.0
margin_bottom = 72.0
text = "Add"

[node name="close" type="Button" parent="addTag"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -47.0
margin_top = -20.0
text = "Close"

[node name="editTags" type="WindowDialog" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -567.0
margin_top = -187.0
margin_bottom = 187.0
size_flags_horizontal = 3
size_flags_vertical = 3
popup_exclusive = true
window_title = "Edit image tags"
resizable = true
script = ExtResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="editTags"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="editTags/HBoxContainer"]
margin_right = 300.0
margin_bottom = 374.0

[node name="path" type="Label" parent="editTags/HBoxContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 14.0

[node name="TextureRect" type="TextureRect" parent="editTags/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 300.0
margin_bottom = 318.0
rect_min_size = Vector2( 300, 300 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 4 )
expand = true
stretch_mode = 1

[node name="name" type="Label" parent="editTags/HBoxContainer/VBoxContainer"]
margin_top = 322.0
margin_right = 300.0
margin_bottom = 336.0

[node name="VBoxContainer2" type="VBoxContainer" parent="editTags/HBoxContainer"]
margin_left = 304.0
margin_right = 567.0
margin_bottom = 374.0
size_flags_horizontal = 3

[node name="ItemList" type="ItemList" parent="editTags/HBoxContainer/VBoxContainer2"]
margin_right = 263.0
margin_bottom = 350.0
size_flags_vertical = 3
select_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="editTags/HBoxContainer/VBoxContainer2"]
margin_top = 354.0
margin_right = 263.0
margin_bottom = 374.0

[node name="cancel" type="Button" parent="editTags/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 54.0
margin_bottom = 20.0
text = "Cancel"

[node name="validate" type="Button" parent="editTags/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 58.0
margin_right = 120.0
margin_bottom = 20.0
text = "Confirm"

[node name="SettingsWindow" type="WindowDialog" parent="."]
visible = true
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -628.0
margin_top = -20.0
margin_bottom = 229.0
size_flags_horizontal = 3
size_flags_vertical = 3
popup_exclusive = true
window_title = "Settings"
resizable = true
script = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsWindow"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsWindow/VBoxContainer"]
margin_right = 628.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="SettingsWindow/VBoxContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 58.0
margin_bottom = 15.0
text = "Icon Size"

[node name="HSlider" type="HSlider" parent="SettingsWindow/VBoxContainer/HBoxContainer"]
margin_left = 62.0
margin_right = 628.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 50.0
max_value = 500.0
value = 50.0

[node name="HBoxContainer2" type="HBoxContainer" parent="SettingsWindow/VBoxContainer"]
margin_top = 20.0
margin_right = 628.0
margin_bottom = 44.0

[node name="extensions" type="Label" parent="SettingsWindow/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 138.0
margin_bottom = 19.0
hint_tooltip = "Specifies extensions to be accepted by the bulk add options.  List the extensions you wish separated by commas.
Note that manually add files supports all extensions"
text = "Additional Extensions"

[node name="LineEdit" type="LineEdit" parent="SettingsWindow/VBoxContainer/HBoxContainer2"]
margin_left = 142.0
margin_right = 628.0
margin_bottom = 24.0
size_flags_horizontal = 3

[connection signal="dir_selected" from="ImageDisplay/FileDialog" to="ImageDisplay" method="_on_FileDialog_dir_selected"]
[connection signal="file_selected" from="ImageDisplay/FileDialog" to="ImageDisplay" method="_on_FileDialog_file_selected"]
[connection signal="files_selected" from="ImageDisplay/FileDialog" to="ImageDisplay" method="_on_FileDialog_files_selected"]
[connection signal="pressed" from="ImageDisplay/VBoxContainer/toolbar/add" to="ImageDisplay" method="_on_add_pressed"]
[connection signal="pressed" from="ImageDisplay/VBoxContainer/toolbar/add_dir" to="ImageDisplay" method="_on_add_dir_pressed"]
[connection signal="pressed" from="ImageDisplay/VBoxContainer/toolbar/delete" to="ImageDisplay" method="_on_delete_pressed"]
[connection signal="pressed" from="ImageDisplay/VBoxContainer/toolbar/purge" to="." method="_on_purge_pressed"]
[connection signal="pressed" from="ImageDisplay/VBoxContainer/toolbar/selectAll" to="ImageDisplay" method="_on_selectAll_pressed"]
[connection signal="pressed" from="ImageDisplay/VBoxContainer/toolbar/deselect" to="ImageDisplay" method="_on_deselect_pressed"]
[connection signal="pressed" from="ImageDisplay/VBoxContainer/toolbar/addRef" to="." method="_on_addRef_pressed"]
[connection signal="pressed" from="ImageDisplay/VBoxContainer/toolbar/dump" to="." method="_on_dump_pressed"]
[connection signal="pressed" from="ImageDisplay/VBoxContainer/toolbar/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="ImageDisplay/VBoxContainer/HBoxContainer2/HBoxContainer/filterMenu" to="." method="_on_filterMenu_pressed"]
[connection signal="child_entered_tree" from="ImageDisplay/VBoxContainer/ScrollContainer/GridContainer" to="." method="_on_GridContainer_child_entered_tree"]
[connection signal="child_exiting_tree" from="ImageDisplay/VBoxContainer/ScrollContainer/GridContainer" to="." method="_on_GridContainer_child_exiting_tree"]
[connection signal="id_pressed" from="ImageDisplay/PopupMenu" to="." method="_on_PopupMenu_id_pressed"]
[connection signal="tab_selected" from="ImageDisplay/VBoxContainer2/VBoxContainer/TabContainer" to="." method="_on_TabContainer_tab_selected"]
[connection signal="pressed" from="ImageDisplay/VBoxContainer2/VBoxContainer/uncheck" to="ImageDisplay/VBoxContainer2/VBoxContainer/TabContainer" method="_on_uncheck_pressed"]
[connection signal="text_changed" from="addTag/HBoxContainer/VBoxContainer2/HBoxContainer/LineEdit" to="addTag" method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="addTag/HBoxContainer/VBoxContainer2/HBoxContainer/addNew" to="addTag" method="_on_addNew_pressed"]
[connection signal="item_selected" from="addTag/HBoxContainer/VBoxContainer2/OptionButton" to="addTag" method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="addTag/HBoxContainer/VBoxContainer2/validate" to="addTag" method="_on_validate_pressed"]
[connection signal="pressed" from="addTag/close" to="addTag" method="_on_close_pressed"]
[connection signal="pressed" from="editTags/HBoxContainer/VBoxContainer2/HBoxContainer/cancel" to="editTags" method="_on_cancel_pressed"]
[connection signal="pressed" from="editTags/HBoxContainer/VBoxContainer2/HBoxContainer/validate" to="editTags" method="_on_validate_pressed"]
[connection signal="drag_ended" from="SettingsWindow/VBoxContainer/HBoxContainer/HSlider" to="SettingsWindow" method="_on_HSlider_drag_ended"]
[connection signal="value_changed" from="SettingsWindow/VBoxContainer/HBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="SettingsWindow/VBoxContainer/HBoxContainer/HSlider" to="SettingsWindow" method="_on_HSlider_value_changed"]
[connection signal="text_changed" from="SettingsWindow/VBoxContainer/HBoxContainer2/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_changed" from="SettingsWindow/VBoxContainer/HBoxContainer2/LineEdit" to="ImageDisplay" method="_on_LineEdit_text_changed"]
